--- a/templates/panel-dashboard.html
+++ b/templates/panel-dashboard.html
@@ -1,6 +1,9 @@
 {{template "header.html" . }}
 {{template "panel-menu.html" . }}
-<div class="colstack_right">
+<div id="panel_dashboard_right" class="colstack_right">
+	<div class="colstack_item colstack_head">
+		<div class="rowitem"><a>Dashboard</a></div>
+	</div>
 	<div id="panel_dashboard" class="colstack_grid">
 {{range .GridItems}}
 		<div id="{{.ID}}" class="grid_item {{.Class}}" title="{{.Note}}" style="{{if .TextColour}}color: {{.TextColour}};{{end}}
