--- a/templates/panel-groups.html
+++ b/templates/panel-groups.html
@@ -18,6 +18,15 @@
 		</div>
 		{{end}}
 	</div>
+	{{if gt .LastPage 1}}
+	<div class="pageset">
+		{{if gt .Page 1}}<div class="pageitem"><a href="?page={{subtract .Page 1}}">Prev</a></div>{{end}}
+		{{range .PageList}}
+		<div class="pageitem"><a href="?page={{.}}">{{.}}</a></div>
+		{{end}}
+		{{if ne .LastPage .Page}}<div class="pageitem"><a href="?page={{add .Page 1}}">Next</a></div>{{end}}
+	</div>
+	{{end}}
 	<div class="colstack_item colstack_head">
 		<div class="rowitem"><a>Create Group</a></div>
 	</div>
