--- a/templates/panel-users.html
+++ b/templates/panel-users.html
@@ -19,5 +19,14 @@
 		</div>
 		{{end}}
 	</div>
+	{{if gt .LastPage 1}}
+	<div class="pageset">
+		{{if gt .Page 1}}<div class="pageitem"><a href="?page={{subtract .Page 1}}">Prev</a></div>{{end}}
+		{{range .PageList}}
+		<div class="pageitem"><a href="?page={{.}}">{{.}}</a></div>
+		{{end}}
+		{{if ne .LastPage .Page}}<div class="pageitem"><a href="?page={{add .Page 1}}">Next</a></div>{{end}}
+	</div>
+	{{end}}
 </div>
 {{template "footer.html" . }}
