--- a/themes/tempra-simple/public/panel.css
+++ b/themes/tempra-simple/public/panel.css
@@ -62,6 +62,8 @@
 .forum_preset_all, .forum_preset_custom, .forum_preset_ { display: none !important; }
 .forum_active_Hide:before { content: "🕵️"; }
 .forum_active_Show { display: none !important; }
+.forum_active_name { color: #707070; }
+.builtin_forum_divider { border-bottom-style: solid; }
 
 .perm_preset_no_access:before { content: "No Access"; color: maroon; }
 .perm_preset_read_only:before { content: "Read Only"; color: green; }
