--- a/templates/account-menu.html
+++ b/templates/account-menu.html
@@ -7,7 +7,8 @@
 		<div class="rowitem passive"><a href="/user/edit/username/">Change Username</a></div>
 		<div class="rowitem passive"><a href="/user/edit/critical/">Change Password</a></div>
 		<div class="rowitem passive"><a href="/user/edit/email/">Change Email</a></div>
-		<div class="rowitem passive"><a>Coming Soon</a></div>
+		<div class="rowitem passive"><a href="/user/notifications">Notifications</a></div>
+		{{/** TO-DO: Add an alerts page with pagination to go through alerts which either don't fit in the alerts drop-down or which have already been dismissed. Bear in mind though that dismissed alerts older than two weeks might be purged to save space and to speed up the database **/}}
 		<div class="rowitem passive"><a>Coming Soon</a></div>
 		<div class="rowitem passive"><a>Coming Soon</a></div>
 	</div>
