Fixed an issue with relative times breaking onto multiple lines. Fixed an issue with new reports not pushing the latest time onto the report forum. Editing topics no longer crashes Gosora. Mod action posts for topic edits now update the latest relative time for the topic's parent forum. The JS for the topic editor now locks onto the parent form properly.

--- a/themes/shadow/public/main.css
+++ b/themes/shadow/public/main.css
@@ -473,6 +473,9 @@ input, select, textarea {
 .topic_list .rowitem:last-child {
 	margin-bottom: 10px;
 }
+.topic_list .lastReplyAt {
+	white-space: nowrap;
+}
 
 /* Profiles */
 #profile_left_lane {
